# python_modules

mod03/: ft_achievement_tracker.py  ft_command_quest.py  ft_coordinate_system.py  ft_data_alchemist.py  ft_data_stream.py  ft_inventory_system.py  ft_score_analytics.py
mod04/: ft_ancient_text.py  ft_archive_creation.py  ft_stream_management.py  ft_vault_security.py
mod05/: comply_eval_sheet_mypy_data_processor.py  data_pipeline.py  data_processor.py  data_stream.py
mod06/: ft_alembic_1.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_kaboom_2.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
mod06/alchemy/: __init__.py  potions.py
mod06/alchemy/grimoire/: __init__.py  dark_spellbook.py  dark_validator.py  light_spellbook.py  light_validator.py  red_spell_record.py  red_spellbook.py  red_validator.py
mod06/alchemy/transmutation/: recipes.py
mod07/: battle.py  capacitor.py  tournament.py
mod07/ex0/: __init__.py  battle.py  creature.py  creature_factory.py
mod07/ex1/: __init__.py  capabilities.py  creature.py  creature_factory.py
mod07/ex2/: __init__.py  battle_strategy.py
mod08/ex0/: .gitignore  construct.py
mod08/ex1/: .gitignore  loading.py  pyproject.toml  requirements.txt
mod08/ex2/: .env.exemple  .gitignore  oracle.py
mod09/: .gitignore
mod09/ex0/: space_station.py
mod09/ex1/: alien_contact.py
mod09/ex2/: space_crew.py
mod10/: decorator_mastery.py  functools_artifacts.py  higher_magic.py  lambda_spells.py  scope_mysteries.py
(+1 files in other folders)
