[tool.poetry]
name = "ex1"
version = "0.1.0"
description = "Loading - Data analysis program"
package-mode = false
authors = [
    {name = "haryandr",email = "haryandr@student.42antananarivo.mg"}
]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.1.0",
numpy = ">=1.25.0",
matplotlib = ">=3.7.2",
requests = ">=2.31.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
